# BasiliskScan

./: .gitignore  LICENSE  MANIFEST.in  MODULAR_STRUCTURE.md  README.md  README.pt-BR.md  README.pypi.md  demo_ingest.py  pyproject.toml  setup.py  test_osv_integration.py
reports/: ant-test-sync.html  ant-test.html  auto-sync-demo-2.html  auto-sync-demo.html  auto-sync-test.html  basiliskscan-ant-no-transitive.html  basiliskscan-ant-with-transitive-fix.html  basiliskscan-ant-with-transitive.html  basiliskscan-progress-check.html  basiliskscan-progress-user-check.html  basiliskscan-report.html  generate_test_report.py  test-report.html
resources/offline/: offline_vulnerabilities.db
scripts/: add_bscan_path.ps1  bump_version.py  install_basiliskscan.ps1  populate_offline_seed.py  prepare_offline_seed.py  release_pypi.ps1
src/basiliskscan/: __init__.py  __main__.py  cli.py  config.py  env.py  help_text.py  parsers.py  path_setup.py  reporter.py  scanner.py  ui.py  updater.py
src/basiliskscan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/basiliskscan/auth/: __init__.py  credential_manager.py
src/basiliskscan/commands/: __init__.py  nvd.py  offline_db.py  scan.py  sonatype_guide.py
src/basiliskscan/controllers/: __init__.py  credentials_controller.py  offline_db_controller.py  scan_controller.py
src/basiliskscan/data/: report.css  vulnerability_types.json
src/basiliskscan/ingest/: README.md  __init__.py  aggregator.py  base.py  cache_json.py  cache_manager.py  cache_sqlite.py  config.py  example_cache_usage.py  example_usage.py  normalizer.py  nvd.py  offline_db.py  offline_sync.py  osv.py  sonatype_guide.py
src/basiliskscan/models/: __init__.py  component.py  vulnerability.py
src/basiliskscan/parsers/: __init__.py  base.py  java.py  nodejs.py  php.py  purl.py
src/basiliskscan/services/: __init__.py  scanner_service.py
src/basiliskscan/views/: __init__.py  help_view.py  terminal_view.py
test-project/: package.json
tests/: test_aggregator_sources.py  test_cache.py  test_cli_help.py  test_cli_path_normalization.py  test_credential_manager.py  test_env_loader.py  test_ingest.py  test_java_parser.py  test_markdown_placeholders.py  test_nodejs_parser.py  test_normalizer.py  test_nvd_client.py  test_nvd_commands.py  test_offline_sync.py  test_osv_client.py  test_php_parser.py  test_reporter.py  test_scan_filters.py  test_sonatype_guide_client.py  test_sonatype_guide_commands.py  test_transitive_filter.py  test_updater.py
