[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basiliskscan"
version = "0.0.1"
description = "BasiliskScan - CLI para varrer projetos e listar dependências vulneráveis ou desatualizadas."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "PuertA" }
]
dependencies = [
  "click>=8.1.0",
  "requests>=2.31.0",
  "packaging>=23.0",
  "rich>=13.0.0"
]

[project.scripts]
basiliskscan = "basiliskscan.cli:cli"
bscan = "basiliskscan.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
