[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basiliskscan"
version = "0.0.1"
description = "BasiliskScan - CLI para varrer projetos e listar dependências vulneráveis ou desatualizadas."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "PuertA" }
]
dependencies = [
  "click>=8.1.0",
  "requests>=2.31.0",
  "packaging>=23.0",
  "rich>=13.0.0",
  "python-dateutil>=2.8.0",
  "deep-translator>=1.11.0",
  "keyring>=24.0.0",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.scripts]
basiliskscan = "basiliskscan.cli:cli"
bscan = "basiliskscan.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
basiliskscan = ["data/*.json"]
