[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basiliskscan"
version = "1.5.17"
description = "BasiliskScan - CLI para varrer projetos e listar dependências vulneráveis ou desatualizadas."
readme = "README.pypi.md"
requires-python = ">=3.10"
authors = [
  { name = "PuertA" }
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = [
  "click>=8.1.0",
  "requests>=2.31.0",
  "packaging>=23.0",
  "rich>=13.0.0",
  "python-dateutil>=2.8.0",
  "deep-translator>=1.11.0",
  "keyring>=24.0.0",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.scripts]
bscan = "basiliskscan.cli:cli"

[project.urls]
Homepage = "https://github.com/PuertA/basiliskscan"
Repository = "https://github.com/PuertA/basiliskscan"
Issues = "https://github.com/PuertA/basiliskscan/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
basiliskscan = ["data/*.json", "data/*.css", "data/offline/*.db"]
